exercise/ex2_9.err
ex2_9.cpp:5:14: error: type 'double' cannot be narrowed to 'int' in initializer list [-Wc++11-narrowing]
    int i = {3.14}; // complained by C++11 compiler
             ^~~~
ex2_9.cpp:5:14: note: insert an explicit cast to silence this issue
    int i = {3.14}; // complained by C++11 compiler
             ^~~~
             static_cast<int>( )
ex2_9.cpp:5:14: warning: implicit conversion from 'double' to 'int' changes value from 3.14 to 3 [-Wliteral-conversion]
    int i = {3.14}; // complained by C++11 compiler
            ~^~~~
ex2_9.cpp:6:21: error: expected '(' for function-style cast or type construction
    std::cin >> int input;
                ~~~ ^
ex2_9.cpp:7:16: error: use of undeclared identifier 'b'
    double a = b = 1.99;
               ^
1 warning and 3 errors generated.
